# mlops-meetup

./: .gitignore  NOTES.md  README.md  inspect-day-output.ipynb  inspect-day.ipynb  main.py  model-testing.ipynb  pyproject.toml
mlops_meetup/: api.py  config.py  data_validation.py  dataflows.py  datawarehouse.py  flows.py  indexes.py  make_indexes.py  modelling.py  parquet_ingest.py
scripts/: get_max_item_id.sql  get_max_user_id.sql  get_reverse_item_lookup.sql  lookups.sql  meta.sql  most_recent_day.sql  reviews.sql  training_data.sql  user_metadata.sql
tests/: test_dataflows.py  test_datawarehouse.py  test_indexes.py  test_mlops_meetup.py  test_modelling.py  test_parquet_ingest.py
