[tool.poetry]
name = "mlops-meetup"
version = "0.1.0"
description = ""
authors = ["Ewan Nicolson <ewan.nicolson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^0.2.7"
jupyter = "^1.0.0"
prefect = "^0.14.22"
dask = "^2021.6.1"
pandas = "^1.2.4"
pyarrow = "^4.0.1"
tensorflow = "^2.5.0"
annoy = "^1.17.0"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
ipdb = "^0.13.9"
jupyter-client = "6.1.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
